fix: centering skull with text on mobile and web

--- a/src/index.css
+++ b/src/index.css
@@ -202,29 +202,42 @@ body {
   /* text-align: center; */
 }
 
+.HTML_WRAPPER {
+  /* background: red; */
+  height: 100%;
+  width: 100%;
+}
+
 .canvas-container {
   position: absolute;
-  top: 50%;
+  /* top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
   z-index: 2;
+}
+
+#canvas {
+  /* height: 90%;
+  width: 100%; */
+  /* background: red; */
 }
 
 .headline-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   pointer-events: none;
-  position: relative;
-  top: -12px;
+  /* position: relative;
+  top: -12px; */
   height: 100%;
   display: flex;
   align-items: center;
+  /* background: black; */
   /* background: pink; */
   /* height: calc(100% - 24px); */
 }
